id inject & support optimistic locking & listener (#34)
* id 주입 에 대한 컨팬션

* polishing

* support optimistic locking

* polishing

* rename module

* EventListBuilder test-supports

* resolve about review form myang

* resolve about review form myang

* apply listener

* fixed bug on clear